Conecta. Primera implementación para la exportanción de facturas al formato Logic Win (Sage). También se han quitado PMD Warnings